--- a/www/run.html
+++ b/www/run.html
@@ -188,7 +188,7 @@
         														<td width='10%'><input id="cant1" name="cant1" type="number" step="0.01" onblur="ingresa(1);" value="1" class="form-control input-md" style="height: 35px;"></td>
         														<td width='40%'><input id="prod1" name="prod1" type="text" onblur="ingresa(1);" class="form-control input-md" style="height: 35px;"></td>
         														<td width='10%' style="text-align: center;"><input id="iva1" name="iva1" onchange="ingresa(1);" type="checkbox" checked="checked"></td>
-        														<td width='15%'><input id="prec1" name="prec1" type="number" step="0.01" onkeypress="return  escribe(event);" onkeyup="ingresa(1);" onblur="ingresa(1);" class="form-control input-md" style="height: 35px;text-align: right;"></td>
+        														<td width='15%'><input id="prec1" name="prec1" type="number" step="0.01" onkeydown="return  escribe(event);" onkeyup="ingresa(1);" onblur="ingresa(1);" class="form-control input-md" style="height: 35px;text-align: right;"></td>
         														<td style="display:none;"><input id="desc1" name="desc1" type="text" onblur="ingresa(1);" class="form-control input-md" style="height: 35px;text-align: right;"></td>
         														<td style="display:none;"><input id="precn1" name="precn1" type="text" class="form-control input-md" style="height: 35px;text-align: right;" readonly="readonly"></td>
         														<td width='15%'><input id="subt1" name="subt1" type="text" class="form-control input-md" style="height: 35px;text-align: right;" readonly="readonly"></td>
