--- a/www/run.html
+++ b/www/run.html
@@ -72,7 +72,7 @@
         										<span class="input-group-addon" id="sizing-addon4" style="width: 85px;"># Cédula</span>
         										<input class="form-control input-md" type="cedula" name="cedula" id="cedula" placeholder="Cédula" value="9999999999999" required="" onclick="vaciar();" autocomplete="off">
         										<div class="input-group-btn">
-        											<button id="boton1" type="button" class="btn btn-primary btn-md" onclick="consultar(); return false;" data-toggle="tooltip" data-placement="right" title="Haz Click Aquí!">Consulta</button>
+        											<button id="boton1" type="button" class="btn btn-primary btn-md" onclick="consultar(); return false;" data-toggle="tooltip" data-placement="bottom" title="Haz Click Aquí!">Consulta</button>
         										</div>
         									</div>
                                             <input class="idcliente" type="hidden">
@@ -123,8 +123,8 @@
                                                 <td><input type="text" name="iva" id="iva" class="form-control" style="text-align: right;width: 100%;display: inline-block;background-color: transparent;border: none;outline:0px;" value="0.00" readonly="readonly"/></td>
                                               </tr>
                                               <tr>
-                                                <td><span style="text-align: left;"><b>TOTAL US$:</b></span></td>
-                                                <td><input type="text" name="total" id="total" class="form-control" style="text-align: right;width: 100%;display: inline-block;font-weight: bold;background-color: transparent;border: none;" value="0.00" readonly="readonly"/></td>
+                                                <td><span style="text-align: left;font-size: 14px;"><b>TOTAL US$:</b></span></td>
+                                                <td><input type="text" name="total" id="total" class="form-control" style="text-align: right;width: 100%;display: inline-block;font-weight: bold;background-color: transparent;border: none;font-size: 14px;" value="0.00" readonly="readonly"/></td>
                                               </tr>
                                             </table>
                                         </div>
@@ -220,8 +220,8 @@
                                                     <!--<label for="basic-url" style=" color:#000000; text-decoration:none; width:100%;">Totales</label>-->
         										    <table style="margin-top: -20px;width: 100%;font-size: 12px;">
                                                       <tr>
-                                                        <td style="width: 20%;"><span style="text-align: left;">Sub Total US$:</span></td>
-                                                        <td style="width: 80%;"><input type="text" name="subtxx" id="subtxx" class="form-control" style="text-align: right;width: 100%;display: inline-block;background-color: transparent;border: none;" value="0.00" readonly="readonly"/></td>
+                                                        <td style="width: 100px;"><span style="text-align: left;">Sub Total US$:</span></td>
+                                                        <td><input type="text" name="subtxx" id="subtxx" class="form-control" style="text-align: right;width: 100%;display: inline-block;background-color: transparent;border: none;" value="0.00" readonly="readonly"/></td>
                                                       </tr>
                                                       <tr style="display: none;">
                                                         <td><span style="text-align: left;">Sub Total sin IVA US$:</span></td>
@@ -236,8 +236,8 @@
                                                         <td><input type="text" name="ivaxx" id="ivaxx" class="form-control" style="text-align: right;width: 100%;display: inline-block;background-color: transparent;border: none;" value="0.00" readonly="readonly"/></td>
                                                       </tr>
                                                       <tr>
-                                                        <td><span style="text-align: left;"><b>TOTAL US$:</b></span></td>
-                                                        <td><input type="text" name="totalxx" id="totalxx" class="form-control" style="text-align: right;width: 100%;display: inline-block;font-weight: bold;background-color: transparent;border: none;" value="0.00" readonly="readonly"/></td>
+                                                        <td><span style="text-align: left;font-size: 14px;"><b>TOTAL US$:</b></span></td>
+                                                        <td><input type="text" name="totalxx" id="totalxx" class="form-control" style="text-align: right;width: 100%;display: inline-block;font-weight: bold;background-color: transparent;border: none;font-size: 14px;" value="0.00" readonly="readonly"/></td>
                                                       </tr>
                                                     </table>
           										  </div>
