--- a/www/run.html
+++ b/www/run.html
@@ -107,8 +107,8 @@
                                               <!--<label for="basic-url" style=" color:#000000; text-decoration:none; width:100%;">Totales</label>-->
                                             <table style="margin-top: -20px;width: 100%;font-size: 12px;">
                                               <tr>
-                                                <td style="width: 20%;"><span style="text-align: left;">Sub Total US$:</span></td>
-                                                <td style="width: 80%;"><input type="text" name="subt" id="subt" class="form-control" style="text-align: right;width: 100%;display: inline-block;background-color: transparent;border: none;outline:0px;" value="0.00" readonly="readonly"/></td>
+                                                <td style="width: 100px;"><span style="text-align: left;">Sub Total US$:</span></td>
+                                                <td><input type="text" name="subt" id="subt" class="form-control" style="text-align: right;width: 100%;display: inline-block;background-color: transparent;border: none;outline:0px;" value="0.00" readonly="readonly"/></td>
                                               </tr>
                                               <tr style="display: none;">
                                                 <td><span style="text-align: left;">Sub Total sin IVA US$:</span></td>
